# monorepo

./: .gitattributes  AGENTS.md  README.md  docker-compose.yml
.claude/: settings.json  settings.local.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml  entrypoint.sh  init-db.sh  pyproject.toml  requirements.txt
backend/apps/authentication/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/authentication/migrations/: 0001_initial.py  0002_add_user_type.py  0003_alter_user_email_provider_passwordresettoken_and_more.py  0004_company_provider_marketplace_fields.py  0005_add_photo_coverage_logo.py  0006_company_pix_key_company_pix_key_type.py  0007_company_base_shipping_prices.py
backend/apps/core/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/core/migrations/: 0001_initial.py  0002_add_deliverer.py  0003_add_review.py  0004_visit_payment_eta_chat.py  0005_add_pending_since.py  0006_item_marca.py  0007_order_item_peso_item_stock_count_ordermessage_and_more.py  0008_inventoryentry.py  0009_remove_review_unique_together.py  0010_order_shipping_cost.py
backend/apps/payments/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/payments/migrations/: 0001_initial.py
backend/config/: urls.py
backend/config/settings/: __init__.py  base.py  development.py  production.py  testing.py
backend/templates/emails/: email_confirmation.html  password_reset.html
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx
frontend/src/app/cart/: page.tsx
frontend/src/app/checkout/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/forgot-password/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/materials/: page.tsx
frontend/src/app/minhas-visitas/: page.tsx
frontend/src/app/my-orders/: page.tsx
frontend/src/app/providers/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: README.md
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useCEP.ts  useMultiStepForm.ts
frontend/src/lib/: api-client.ts  auth.ts
frontend/src/types/: index.ts
frontend/src/utils/: formatters.ts  index.ts
mobile/: .env.example  .gitignore  PLAN.md  README.md  app.json  eas.json  package-lock.json  package.json
mobile/app/: _layout.tsx  index.tsx
mobile/app/(app)/: _layout.tsx
mobile/app/(auth)/: _layout.tsx  login.tsx
mobile/src/api/: admin.ts  auth.ts  cart.ts  client.ts  company.ts  orders.ts  payments.ts  providers.ts  stores.ts  visits.ts
mobile/src/assets/: placeholder-store.ts
mobile/src/hooks/: useCEP.ts  useCartCount.ts  usePaymentStatus.ts  usePolling.ts  useTheme.ts  useVisitMessages.ts
mobile/src/store/: authStore.ts  cartStore.ts  themeStore.ts  uiStore.ts
mobile/src/theme/: colors.ts  index.ts  radius.ts  shadows.ts  spacing.ts  themes.ts  typography.ts
mobile/src/types/: index.ts
mobile/src/utils/: currency.ts  date.ts  formatters.ts  media.ts
(+106 files in other folders)
